@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.62 2003/11/01 15:36:54 jaco Exp $
+# $Id: CHANGELOG,v 1.63 2003/11/02 11:46:33 jaco Exp $
 
 * Sat, Nov 01, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -42,6 +42,8 @@
         options and additions
       - Added '--fstab' option for overriding the default fstab
         creation behaviour
+      - Added the ability to include extra boot options to be
+        passed to the kernel with '--bootopt' options
 
 
 * Mon, Oct 06, 2003, 0.5.6
